:recycle: refactor: Shelter controller refactored