@@ -3,10 +3,13 @@ package br.com.mascarenhasb2.adopet.domain.model.guardian;
 import br.com.mascarenhasb2.adopet.domain.model.guardian.dto.GuardianCreatedDTO;
 import br.com.mascarenhasb2.adopet.domain.model.guardian.dto.GuardianCreationDTO;
 import br.com.mascarenhasb2.adopet.domain.model.guardian.dto.GuardianDetailsDTO;
+import br.com.mascarenhasb2.adopet.domain.model.guardian.dto.GuardianUpdateDTO;
 import br.com.mascarenhasb2.adopet.domain.model.user.Role;
 import br.com.mascarenhasb2.adopet.domain.model.user.User;
 import br.com.mascarenhasb2.adopet.domain.repository.GuardianRepository;
 import br.com.mascarenhasb2.adopet.domain.repository.UserRepository;
+import br.com.mascarenhasb2.adopet.infra.exception.dto.ListResponseDTO;
+import br.com.mascarenhasb2.adopet.infra.exception.dto.SingleResponseDTO;
 import br.com.mascarenhasb2.adopet.util.EmailUtil;
 import br.com.mascarenhasb2.adopet.util.PasswordUtil;
 import br.com.mascarenhasb2.adopet.util.URIUtil;
@@ -17,9 +20,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 public class GuardianService {
     @Autowired
@@ -27,7 +27,7 @@ public class GuardianService {
     @Autowired
     private UserRepository userRepository;
 
-    public ResponseEntity<GuardianCreatedDTO> create(GuardianCreationDTO guardianCreationDTO, UriComponentsBuilder uriBuilder){
+    public ResponseEntity<SingleResponseDTO> createGuardian(GuardianCreationDTO guardianCreationDTO, UriComponentsBuilder uriBuilder){
         EmailUtil.verifyIfExists(userRepository, guardianCreationDTO.user().email());
 
         String encodedPassword = PasswordUtil.encode(guardianCreationDTO.user().password());
@@ -42,23 +42,62 @@ public class GuardianService {
                 guardian.getId(),
                 uriBuilder
         );
+        var createdGuardianDTO = new SingleResponseDTO(
+                String.valueOf(HttpStatus.CREATED.value()),
+                "Tutor criado com sucesso!",
+                new GuardianCreatedDTO(guardian)
+        );
 
-        return ResponseEntity.created(uri).body(new GuardianCreatedDTO(guardian));
+        return ResponseEntity.created(uri).body(createdGuardianDTO);
     }
-    public ResponseEntity<List<GuardianDetailsDTO>> read() {
+    public ResponseEntity<ListResponseDTO> readAllGuardians() {
         var guardians = guardianRepository.findAll();
         if (guardians.isEmpty()){
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(guardians.stream().map(GuardianDetailsDTO::new).collect(Collectors.toList()));
+
+        var listOfGuardians = new ListResponseDTO(
+                String.valueOf( HttpStatus.OK.value()),
+                "Consulta realizada com sucesso!",
+                guardians.stream().map(GuardianDetailsDTO::new).toList()
+        );
+
+        return ResponseEntity.ok(listOfGuardians);
     }
 
-    public ResponseEntity<GuardianDetailsDTO> readById(Long id){
+    public ResponseEntity<SingleResponseDTO> readGuardianById(Long id){
         try{
             var guardian = guardianRepository.getReferenceById(id);
-            return ResponseEntity.ok(new GuardianDetailsDTO(guardian));
+            return ResponseEntity.ok(createSingleResponseDTO(guardian));
         }catch (EntityNotFoundException exception){
             throw new EntityNotFoundException();
         }
     }
+
+    public ResponseEntity<SingleResponseDTO> updateGuardian(GuardianUpdateDTO guardianUpdateDTO){
+        try{
+            var guardian = guardianRepository.getReferenceById(guardianUpdateDTO.id());
+            guardian.updateInformation(guardianUpdateDTO);
+            return ResponseEntity.ok(createSingleResponseDTO(guardian));
+        }catch (EntityNotFoundException exception){
+            throw new EntityNotFoundException();
+        }
+    }
+
+    public ResponseEntity<SingleResponseDTO> deleteById(Long id){
+        if(guardianRepository.existsById(id)) {
+            guardianRepository.deleteById(id);
+            return ResponseEntity.noContent().build();
+        }
+        throw new EntityNotFoundException();
+    }
+
+    private SingleResponseDTO createSingleResponseDTO(Guardian guardian){
+        return new SingleResponseDTO(
+                String.valueOf(HttpStatus.OK.value()),
+                "Operação realizada com sucesso!",
+                new GuardianDetailsDTO(guardian)
+        );
+    }
+
 }
